@startuml Modelo de domínio
' hide the spot


' avoid problems with angled crows feet
skinparam linetype ortho

package Product{
  entity "<<root>>\nProduct"
}

package User{
  entity "<<root>>\nCustomer"
  entity User
  enum WarehouseEmployee
  enum SalesClerk
  enum SalesManager
  enum Admin

}

package Questionnaire{
  entity "<<root>>\nQuestionnaire"
  entity Section
  entity Question
}

package Warehouse{
  entity "<<root>>\nWarehouse"
  entity Aisle
  entity Row
  entity Shelf
}

package AGV{
    entity "<<root>>\nAGV"
}

package Category{
    entity "<<root>>\nCategory"
}


package Status{
        entity "<<root>>\nStatus"
}

package Order{
  entity "<<root>>\nOrder"
  entity ShoppingCart_Line
  entity Order_Line
  entity ShoppingCart
}
package AGVDock{
  entity "<<root>>\nAGVDock"
}

package Category{
  entity "<<root>>\nCategory"
}

package Task{
  entity "<<root>>\nTask"
}




"<<root>>\nCustomer" -left--|> User
WarehouseEmployee --|> User
SalesClerk --|> User
SalesManager --|> User
Admin --|> User
"<<root>>\nCustomer" "1..*" --> "1..*" "<<root>>\nProduct": views
"<<root>>\nProduct" "*" --> "1"  "<<root>>\nCategory" : belongs to
"<<root>>\nOrder" "1" ..> "1" ShoppingCart : corresponds
ShoppingCart "1" --> "1..*" ShoppingCart_Line : contains
"<<root>>\nOrder" "1..*" --> "1" "<<root>>\nStatus" : has
"<<root>>\nProduct" "1..*" --> "1" "<<root>>\nWarehouse" : stored
"<<root>>\nQuestionnaire" "1" --> "1..*" Question : contains
"<<root>>\nQuestionnaire" "1" --> "1..*" Section : has
Section "1" --> "1..*" Question : contains
"<<root>>\nWarehouse" "1" --> "1*.." "<<root>>\nAGV" : contains
"<<root>>\nCustomer" "1..*" --> "1..*" "<<root>>\nQuestionnaire" : answers
"<<root>>\nWarehouse" "1" --> "1..*" Aisle : organized by
"<<root>>\nAGV" "1" --> "1" "<<root>>\nAGVDock" : has
Aisle "1" --> "1..*" Row : divided by
Row "1" --> "1..*" Shelf  : contains
"<<root>>\nOrder" "1" --> "1..*" "<<root>>\nProduct" : contains
"<<root>>\nOrder" "1" --> "1..*" Order_Line : contains
"<<root>>\nAGV" "1..*" --> "1" "<<root>>\nTask": performs
SalesClerk "1" --> "1..*" "<<root>>\nProduct": specifies
SalesClerk "1" --> "1..*" "<<root>>\nCategory": creates
SalesClerk "1" --> "1..*" "<<root>>\nOrder": performs
Admin "1" --> "1..*" User: manages
"<<root>>\nWarehouse" "1" --> "1..*" "<<root>>\nAGVDock": houses
WarehouseEmployee "1" --> "1..*" "<<root>>\nAGV": configures




@enduml